--- a/resources/index.html
+++ b/resources/index.html
@@ -3,90 +3,93 @@
 <head>
 	<title>Pixel Art</title>
 	<link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js "></script>
 </head>
 <body>
 <h1>My Pixel Art Project</h1>
+<div id="pallete">
+	<div class="pen" style="background-color: white;" onclick="setPenColor('white')"></div>
+	<div class="pen" style="background-color: black;" onclick="setPenColor('black')"></div>
+</div>
 <div id="art">
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 	<div class="row">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 </div>
 </body>
