--- a/resources/index.html
+++ b/resources/index.html
@@ -90,6 +90,7 @@
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
 		<div class="pixel" onclick="setPixelColor(this)"></div>
+		<div class="pixel" onclick="setPixelColor(this)"></div>
 	</div>
 </div>
 </body>
